...

                    <EditText
                        android:id="@+id/editTextEventTitle"
                        style="@style/CustomEditText"
                        android:layout_width="match_parent"
...

                    <EditText
                        android:id="@+id/editTextEventDescription"
                        style="@style/CustomEditText"
                        android:layout_width="match_parent"
...

                        <ToggleButton
                            android:id="@+id/toggleGeolocationRequirement"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/editTextLocation"
                        style="@style/CustomEditText"
                        android:layout_width="match_parent"
...

                        <EditText
                            android:id="@+id/editTextStartDate"
                            style="@style/CustomEditText"
                            android:layout_width="0dp"
...

                        <EditText
                            android:id="@+id/editTextStartTime"
                            style="@style/CustomEditText"
                            android:layout_width="0dp"
...

                        <EditText
                            android:id="@+id/editTextEndDate"
                            style="@style/CustomEditText"
                            android:layout_width="0dp"
...

                        <EditText
                            android:id="@+id/editTextEndTime"
                            style="@style/CustomEditText"
                            android:layout_width="0dp"
...

                        <EditText
                            android:id="@+id/editRegistrationStartDate"
                            style="@style/CustomEditText"
                            android:layout_width="0dp"
...

                        <EditText
                            android:id="@+id/editRegistrationStartTime"
                            style="@style/CustomEditText"
                            android:layout_width="0dp"
...

                        <EditText
                            android:id="@+id/editRegistrationEndDate"
                            style="@style/CustomEditText"
                            android:layout_width="0dp"
...

                        <EditText
                            android:id="@+id/editRegistrationEndTime"
                            style="@style/CustomEditText"
                            android:layout_width="0dp"
...

                    <EditText
                        android:id="@+id/editTextCapacity"
                        style="@style/CustomEditText"
                        android:layout_width="match_parent"
...

                        <Button
                            android:id="@+id/generateHashInformation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/buttonCreateEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
