...
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="Toggle Mode"
            android:visibility="gone"
            />
        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/rounded_button"
            android:hint="Email"
            android:padding="12dp"
            android:textColor="#000000"
            android:textColorHint="#808080"
            android:textSize="15sp" />

        <!-- Password Field -->
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_button"
            android:hint="Password"
            android:inputType="textPassword"
...




        <!-- Login Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@null"
...
